# midnight

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  model.rs  quirk.rs
src/model/: draftbox.rs  message.rs  mua.rs  pipe.rs  record.rs
src/quirk/: edible.rs
