[package]
name = "midnight"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Send mail later via batch queueing"
default-run = "midnight"

[[bin]]
name = "midnight"
path = "src/bin/midnight.rs"

[[bin]]
name = "mn"
path = "src/bin/midnight.rs"

[dependencies]
anyhow = "1.0.100"
mail-parser = "0.11.1"
