[package]
name = "midnight"
version = "0.4.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/pinecat/midnight"
description = "Send mail later via batch queueing"
default-run = "midnight"

[[bin]]
name = "midnight"
path = "src/bin/midnight.rs"

[[bin]]
name = "mn"
path = "src/bin/mn.rs"

[[bin]]
name = "mnq"
path = "src/bin/mnq.rs"

[[bin]]
name = "mnrm"
path = "src/bin/mnrm.rs"

[[bin]]
name = "mnsend"
path = "src/bin/mnsend.rs"

[dependencies]
anyhow = "1.0.100"
constcat = "0.6.1"
csv = "1.4.0"
duct = "1.1.0"
flager = "0.0.9"
mail-parser = "0.11.1"
quirks = "<= 1.0.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
